k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: game
  labels:
    app.kubernetes.io/part-of: game-platform
